monticore-generator/src/test/resources/cocos/invalid/A0279/A0279a.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A0279;

grammar A0279a {

  symbol A = Name Name;

  B = A;

}
